@@ -7,11 +7,11 @@
 <sect1 id="rni18">
     <title>Internationalization</title>
 
-    <para>
+    <!-- Translators: I have only changed language count in here: s/40/33/ --><para>
     Thanks to members of the worldwide <ulink
     url="http://developer.gnome.org/projects/gtp/">GNOME Translation
     Project</ulink>, under the leadership of Christian Rose and Kjartan Maraas,
-    GNOME &version; offers support for 40 languages (at least 80 percent of
+    GNOME &version; offers support for 33 languages (at least 80 percent of
     strings translated).
 
 <!--
@@ -38,58 +38,43 @@
     <!-- languages on the list that are currently under quota, are marked with
     their current translation count -->
     <itemizedlist>
-      <!-- 97.00% --><listitem><para>Albanian (5 million speakers)</para></listitem>
-      <!-- 71.99% --><listitem><para>Arabic (235 million)</para></listitem>
-      <!-- 70.62% --><listitem><para>Azerbaijani (28 million)</para></listitem>
-      <!-- 66.07% --><listitem><para>Basque (580,000)</para></listitem>
-      <!-- 54.45% --><listitem><para>Belarusian (7 million)</para></listitem>
-      <!-- 55.75% --><listitem><para>Bengali (189 million)</para></listitem>
-      <!-- 57.67% --><listitem><para>Bosnian (3 million)</para></listitem>
-      <!-- 97.03% --><listitem><para>Brazilian Portuguese (175 million)</para></listitem>
-      <!-- 97.86% --><listitem><para>Bulgarian (9 million)</para></listitem>
-      <!-- 99.20% --><listitem><para>Catalan (7 million)</para></listitem>
+      <!-- 99.99% --><listitem><para>Albanian (5 million speakers)</para></listitem>
+      <!-- 100.00% --><listitem><para>Brazilian Portuguese (175 million)</para></listitem>
+      <!-- 97.95% --><listitem><para>Bulgarian (9 million)</para></listitem>
+      <!-- 99.82% --><listitem><para>Catalan (7 million)</para></listitem>
       <!-- 87.29% --><listitem><para>Chinese Simplified (over 1 billion)</para></listitem>
-      <!-- 77.66% --><listitem><para>Chinese Traditional (40 million)</para></listitem>
-      <!-- 59.72% --><listitem><para>Croatian (5 million)</para></listitem>
+      <!-- 81.93% --><listitem><para>Chinese Traditional (40 million)</para></listitem>
       <!-- 99.98% --><listitem><para>Czech (11 million)</para></listitem>
-      <!-- 100.00% --><listitem><para>Danish (5.3 million)</para></listitem>
-      <!-- 96.36% --><listitem><para>Dutch (over 21 million)</para></listitem>
+      <!-- 99.99% --><listitem><para>Danish (5.3 million)</para></listitem>
+      <!-- 99.62% --><listitem><para>Dutch (over 21 million)</para></listitem>
       <!-- % --><listitem><para>English (341 million)</para></listitem>
-      <!-- 65.39% --><listitem><para>Estonian (1 million)</para></listitem>
-      <!-- 92.93% --><listitem><para>Finnish (over 5 million)</para></listitem>
-      <!-- 96.62% --><listitem><para>French (over 75 million)</para></listitem>
-      <!-- 100.00% --><listitem><para>German (100 million)</para></listitem>
-      <!-- 100.00% --><listitem><para>Greek (15 million)</para></listitem>
-      <!-- 100.00% --><listitem><para>Gujarati (46 million)</para></listitem>
-      <!-- 76.71% --><listitem><para>Hindi (370 million)</para></listitem>
-      <!-- 84.73% --><listitem><para>Hungarian (14.5 million)</para></listitem>
-      <!-- 51.69% --><listitem><para>Indonesian (25 million)</para></listitem>
-      <!-- 79.51% --><listitem><para>Italian (60 million)</para></listitem>
-      <!-- 99.57% --><listitem><para>Japanese (over 125 million)</para></listitem>
-      <!-- 99.38% --><listitem><para>Korean (75 million)</para></listitem>
+      <!-- 99.84% --><listitem><para>Finnish (over 5 million)</para></listitem>
+      <!-- 97.69% --><listitem><para>French (over 75 million)</para></listitem>
+      <!-- 99.99% --><listitem><para>German (100 million)</para></listitem>
+      <!-- 99.98% --><listitem><para>Greek (15 million)</para></listitem>
+      <!-- 99.99% --><listitem><para>Gujarati (46 million)</para></listitem>
+      <!-- 79.61% --><listitem><para>Hindi (370 million)</para></listitem>
+      <!-- 89.28% --><listitem><para>Hungarian (14.5 million)</para></listitem>
+      <!-- 81.06% --><listitem><para>Italian (60 million)</para></listitem>
+      <!-- 99.80% --><listitem><para>Japanese (over 125 million)</para></listitem>
+      <!-- 99.36% --><listitem><para>Korean (75 million)</para></listitem>
       <!-- 100.00% --><listitem><para>Lithuanian (4 million)</para></listitem>
-      <!-- 65.07% --><listitem><para>Macedonian (1.5 million)</para></listitem>
-      <!-- 63.03% --><listitem><para>Malay (over 17 million)</para></listitem>
-      <!-- 57.33% --><listitem><para>Mongolian (10 million)</para></listitem>
-      <!-- 95.10% --><listitem><para>Norwegian Bookmal (5 million)</para></listitem>
-      <!-- 73.06% --><listitem><para>Norwegian Nynorsk (2 million)</para></listitem>
-      <!-- 92.40% --><listitem><para>Panjabi (60 million)</para></listitem>
-      <!-- 96.61% --><listitem><para>Polish (44 million)</para></listitem>
-      <!-- 92.37% --><listitem><para>Portuguese (43 million)</para></listitem>
-      <!-- 64.14% --><listitem><para>Romanian (26 million)</para></listitem>
-      <!-- 95.58% --><listitem><para>Russian (170 million)</para></listitem>
-      <!-- 91.64% --><listitem><para>Serbian (10 million)</para></listitem>
-      <!-- 61.33% --><listitem><para>Slovak (5 million)</para></listitem>
-      <!-- 100.00% --><listitem><para>Spanish (over 350 million)</para></listitem>
-      <!-- 87.87% --><listitem><para>Swedish (9 million)</para></listitem>
-      <!-- 79.35% --><listitem><para>Tamil (61 million)</para></listitem>
-      <!-- 84.22% --><listitem><para>Turkish (150 million)</para></listitem>
-      <!-- 99.95% --><listitem><para>Ukrainian (50 million)</para></listitem>
-      <!-- 63.97% --><listitem><para>Vietnamese</para></listitem>
-      <!-- 81.78% --><listitem><para>Welsh (575,000)</para></listitem>
+      <!-- 95.34% --><listitem><para>Norwegian Bookmal (5 million)</para></listitem>
+      <!-- 99.99% --><listitem><para>Panjabi (60 million)</para></listitem>
+      <!-- 98.00% --><listitem><para>Polish (44 million)</para></listitem>
+      <!-- 99.99% --><listitem><para>Portuguese (43 million)</para></listitem>
+      <!-- 95.66% --><listitem><para>Russian (170 million)</para></listitem>
+      <!-- 97.36% --><listitem><para>Serbian (10 million)</para></listitem>
+      <!-- 99.98% --><listitem><para>Spanish (over 350 million)</para></listitem>
+      <!-- 88.29% --><listitem><para>Swedish (9 million)</para></listitem>
+      <!-- 79.96% --><listitem><para>Tamil (61 million)</para></listitem>
+      <!-- 84.60% --><listitem><para>Turkish (150 million)</para></listitem>
+      <!-- 99.96% --><listitem><para>Ukrainian (50 million)</para></listitem>
+      <!-- 82.26% --><listitem><para>Welsh (575,000)</para></listitem>
   </itemizedlist>
   </para>
-  
+
+<!--  These paragraphs are incorrect now.
   <para>Note that Basque, Bulgarian, Gujarati, Hindi, Hungarian, Norwegian Nynorsk, Panjabi and Tamil
   are new supported languages in GNOME &version;,
   thanks to the hard work of their translators. Also worthy of mention is that British English
@@ -97,4 +82,5 @@
   
   <para>Another 9 languages are partially supported, with more than half of
   their strings translated. Croatian and Mongolian are particularly close to &quot;supported&quot; status.</para>
+-->
 </sect1>
