@@ -1,3 +1,8 @@
+2005-03-06  Danilo Šegan  <dsegan@gmx.net>
+
+	* rni18n.xml: Comment unused paragraphs out.
+	Update language count to 33.
+
 2005-03-06  Murray Cumming  <murrayc@murrayc.com>
 
 	* press_release/gnome210_press_release.[sxw|wml]: Corrected spelling 
